--- a/survey-form/styles.css
+++ b/survey-form/styles.css
@@ -1,75 +1,76 @@
 body {
-    background-image: url(https://images.pexels.com/photos/9100862/pexels-photo-9100862.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
-    font-family: Tahoma;
-    font-size: 16px;
-    padding: 20px auto;
-    width: 100%;
-    height: 100vh;
-    margin: 0;
-  }
-  
-  h1, p {
-    margin: 1em auto;
-    text-align: center;
-  }
-  
-  form {
-    width: 60vw;
-    max-width: 500px;
-    min-width: 300px;
-    margin: 0 auto;
-    padding-bottom: 2em;
-  }
-  
-  fieldset {
-    border: none;
-    padding: 2rem 0;
-    border-bottom: 3px solid #3b3b4f;
-  }
-  
-  fieldset:last-of-type {
-    border-bottom: none;
-  }
-  
-  label {
-    display: block;
-    margin: 0.5rem 0;
-  }
-  
-  input,
-  textarea,
-  select {
-    margin: 10px 0 0 0;
-    width: 100%;
-    min-height: 2em;
-  }
-  
-  input, textarea {
-    background-color: #0a0a23;
-    border: 1px solid #0a0a23;
-    color: #ffffff;
-  }
-  
-  .inline {
-    width: unset;
-    margin: 0 0.5em 0 0;
-    vertical-align: middle;
-  }
-  
-  input[type="submit"] {
-    display: block;
-    width: 60%;
-    margin: 1em auto;
-    height: 2em;
-    font-size: 1.1rem;
-    background-color: #3b3b4f;
-    border-color: white;
-    min-width: 300px;
-  }
-  
-  input[type="file"] {
-    padding: 1px 2px;
-  }
-  
-  
-  
+  background-image: url(https://images.pexels.com/photos/9100862/pexels-photo-9100862.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
+  font-family: Tahoma;
+  font-size: 16px;
+  color: #192a29;
+  padding: 10px auto;
+  margin: 30px auto;
+}
+
+h1, p {
+  margin: 0.5em auto;
+  text-align: center;
+}
+
+form {
+  background: linear-gradient(rgba(220,193,155,0.75),rgba(217,57,18,0.75));
+  width: 75vw;
+  max-width: 750px;
+  min-width: 400px;
+  margin: 0 auto;
+  padding: 2em;
+}
+
+fieldset {
+  border-color: #6a3874;
+  padding: 2rem ;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+label {
+  display: block;
+  margin: 0.5rem 0;
+}
+
+input,
+textarea,
+select {
+  margin: 10px 0 0 0;
+  width: 100%;
+  min-height: 2em;
+}
+
+::placeholder{
+color: #e4e4d9;
+}
+
+#favourite {
+  margin-bottom: 20px;
+}
+
+input, textarea {
+  background-color: #315452;
+  border: 1px solid #315452;
+  color: #e4e4d9;
+}
+
+select {
+  background-color: #6a3874;
+  color: #e4e4d9;
+}
+
+.inline {
+  width: unset;
+  margin: 0 0.5em 0 0;
+  vertical-align: middle;
+}
+
+input[type="submit"] {
+  display: block;
+  width: 100%;
+  margin: 1em auto;
+  font-size: 1.1rem;
+  background-color: #6a3874;
+}
+
