--- a/survey-form/styles.css
+++ b/survey-form/styles.css
@@ -2,14 +2,27 @@ body {
   background-image: url(https://images.pexels.com/photos/9100862/pexels-photo-9100862.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
   font-family: Tahoma;
   font-size: 16px;
-  color: #192a29;
+  color: #542C5C;
   padding: 10px auto;
   margin: 30px auto;
 }
 
 h1, p {
-  margin: 0.5em auto;
+  margin: 0em auto;
   text-align: center;
+  background-color: rgba(228,228,217,0.6);
+  width: 75vw;
+  padding: 15px;
+}
+
+h1{ 
+  border-radius: 5px 5px 0 0;
+}
+
+p { 
+  margin-bottom: 20px;
+  padding-top: 0px;
+  border-radius: 0 0 5px 5px;
 }
 
 form {
@@ -19,6 +32,7 @@ form {
   min-width: 400px;
   margin: 0 auto;
   padding: 2em;
+  border-radius: 5px;
 }
 
 fieldset {
@@ -26,6 +40,7 @@ fieldset {
   padding: 2rem ;
   padding-top: 10px;
   padding-bottom: 10px;
+  border-radius: 5px;
 }
 
 label {
@@ -39,6 +54,7 @@ select {
   margin: 10px 0 0 0;
   width: 100%;
   min-height: 2em;
+  border-radius: 5px;
 }
 
 ::placeholder{
@@ -72,5 +88,6 @@ input[type="submit"] {
   margin: 1em auto;
   font-size: 1.1rem;
   background-color: #6a3874;
+  border-radius: 5px;
 }
 
