Fixed to not include all paragraph elements

--- a/survey-form/styles.css
+++ b/survey-form/styles.css
@@ -7,7 +7,7 @@ body {
   margin: 30px auto;
 }
 
-h1, p {
+h1, #description {
   margin: 0em auto;
   text-align: center;
   background-color: rgba(228,228,217,0.6);
@@ -19,7 +19,7 @@ h1{
   border-radius: 5px 5px 0 0;
 }
 
-p { 
+#description { 
   margin-bottom: 20px;
   padding-top: 0px;
   border-radius: 0 0 5px 5px;
